<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.AddMeeting.AddMeetingActivity"
    android:background="@drawable/gradient"
    android:id="@+id/add_activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_add_meeting_title"
        android:id="@+id/title"
        android:textStyle="bold"
        android:textSize="@dimen/activity_add_meeting_title_text_size"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:padding="20dp"
        android:gravity="center"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/title">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_add_meeting_buttons_height"
        android:id="@+id/date_bt"
        android:background="@drawable/border"
        android:textColor="@android:color/white"
        android:text="@string/activity_add_meeting_date_bt"
        android:textSize="@dimen/activity_add_meeting_buttons_text_size"
        android:layout_marginTop="@dimen/activity_add_meeting_buttons_marginTop"
        android:layout_marginStart="@dimen/activity_add_meeting_buttons_margin"
        android:layout_marginEnd="@dimen/activity_add_meeting_buttons_margin"
        android:layout_marginBottom="@dimen/activity_add_meeting_buttons_margin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_add_meeting_buttons_height"
            android:id="@+id/duree_bt"
            android:background="@drawable/border"
            android:textColor="@android:color/white"
            android:text="@string/activity_add_meeting_duree_bt"
            android:layout_margin="@dimen/activity_add_meeting_buttons_margin"
            android:textSize="@dimen/activity_add_meeting_buttons_text_size"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_add_meeting_buttons_height"
            android:id="@+id/time_bt"
            android:background="@drawable/border"
            android:textColor="@android:color/white"
            android:text="@string/activity_add_meeting_time_bt"
            android:layout_margin="@dimen/activity_add_meeting_buttons_margin"
            android:textSize="@dimen/activity_add_meeting_buttons_text_size"/>

        <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_add_meeting_buttons_height"
        android:id="@+id/room_bt"
        android:background="@drawable/border"
        android:textColor="@android:color/white"
        android:text="@string/activity_add_meeting_room_bt"
        android:textSize="@dimen/activity_add_meeting_buttons_text_size"
        android:layout_margin="@dimen/activity_add_meeting_buttons_margin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_add_meeting_buttons_height"
        android:id="@+id/subject_bt"
        android:background="@drawable/border"
        android:textColor="@android:color/white"
        android:text="@string/activity_add_meeting_subject_bt"
        android:textSize="@dimen/activity_add_meeting_buttons_text_size"
        android:layout_margin="@dimen/activity_add_meeting_buttons_margin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_add_meeting_buttons_height"
        android:id="@+id/participants_bt"
        android:background="@drawable/border"
        android:textColor="@android:color/white"
        android:text="@string/activity_add_meeting_participants_bt"
        android:textSize="@dimen/activity_add_meeting_buttons_text_size"
        android:layout_margin="@dimen/activity_add_meeting_buttons_margin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/participants_tv"
        android:gravity="center"
        android:text=""
        android:textSize="@dimen/activity_add_meeting_tv_text_size"
        android:textColor="#C03469C3"
        android:singleLine="true"
        android:layout_marginTop="@dimen/activity_add_meeting_buttons_margin"
        android:layout_marginStart="@dimen/activity_add_meeting_buttons_margin"
        android:layout_marginEnd="@dimen/activity_add_meeting_buttons_margin"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ok_fab"
        app:elevation="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_done_all_white_24dp"
        android:layout_marginTop="@dimen/activity_add_meeting_fab_marginTop"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_add_meeting_fab_marginBot"/>

    </LinearLayout>
   </ScrollView>
</RelativeLayout>