...
        android:gravity="center"
        android:padding="5dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/participant_et"
        android:hint="@string/fragment_participants_dialog_participant_et"
        android:textSize="@dimen/fragment_participants_dialog_et_text_size"
        android:gravity="center"
        android:padding="10dp"/>

    <Button
...
        android:textSize="@dimen/fragment_dialog_button"
        android:id="@+id/add_participant"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_gravity="center_horizontal"
        />

...
