<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MeetingListFragment">

    <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/fragment_meeting_list_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />


</RelativeLayout>