<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="ifRoom"
        android:title="Filtres">

        <menu>
            <item
                android:id="@+id/by_rooms"
                android:title="@string/filter_by_room"/>
            <item
                android:id="@+id/by_Date"
                android:title="@string/filter_by_date"
                android:checkable="true"/>
        </menu>

    </item>
</menu>